# ai-agent-system

./: .agent-system-policy.example.json  .agent-system-policy.json  .agent-system.example.json  .audit-bundle-admission.example.json  .audit-trust-admission.example.json  .audit-trust-receiver-acceptance-trust-admission.example.json  .audit-trust-receiver-admission.example.json  .gitignore  .release-admission.example.json  .release-transition.example.json  AGENTS.md  CHANGELOG.md  NOTICE.md  README.md  action.yml  agent_audit.py  agent_audit_admission.py  agent_audit_bundle.py  agent_audit_catalog.py  agent_audit_checkpoint.py  agent_audit_consistency.py  agent_audit_events.py  agent_audit_segments.py  agent_audit_trust.py  agent_audit_trust_admission.py  agent_audit_trust_bundle.py  agent_audit_trust_bundle_core.py  agent_audit_trust_checkpoint.py  agent_audit_trust_consistency.py  agent_audit_trust_receiver.py  agent_audit_trust_receiver_acceptance.py  agent_audit_trust_receiver_acceptance_admission.py  agent_audit_trust_receiver_acceptance_bundle.py  agent_audit_trust_receiver_acceptance_checkpoint.py  agent_audit_trust_receiver_acceptance_consistency.py  agent_audit_trust_receiver_acceptance_trust.py  agent_audit_trust_receiver_acceptance_trust_admission.py  agent_audit_trust_receiver_acceptance_trust_bundle.py  agent_audit_trust_receiver_acceptance_trust_checkpoint.py  agent_audit_trust_receiver_acceptance_trust_consistency.py  (+18 more)
.github/workflows/: audit-bundle-admission-package.yml  audit-bundle-admission.yml  audit-bundle-trust-package.yml  audit-bundle-trust.yml  audit-catalog-checkpoint.yml  audit-catalog-consistency.yml  audit-catalog.yml  audit-event-admission.yml  audit-evidence-bundle-package.yml  audit-evidence-bundle.yml  audit-integrity.yml  audit-segments.yml  audit-trust-admission-package.yml  audit-trust-admission.yml  audit-trust-bundle-package.yml  audit-trust-bundle.yml  audit-trust-checkpoint-package.yml  audit-trust-checkpoint.yml  audit-trust-consistency-package.yml  audit-trust-consistency.yml  audit-trust-receiver-acceptance-admission-package.yml  audit-trust-receiver-acceptance-admission.yml  audit-trust-receiver-acceptance-bundle-package.yml  audit-trust-receiver-acceptance-bundle.yml  audit-trust-receiver-acceptance-checkpoint-package.yml  audit-trust-receiver-acceptance-checkpoint.yml  audit-trust-receiver-acceptance-consistency-package.yml  audit-trust-receiver-acceptance-consistency.yml  audit-trust-receiver-acceptance-package.yml  audit-trust-receiver-acceptance-trust-admission-package.yml  audit-trust-receiver-acceptance-trust-admission.yml  audit-trust-receiver-acceptance-trust-bundle-package.yml  audit-trust-receiver-acceptance-trust-bundle.yml  audit-trust-receiver-acceptance-trust-checkpoint-package.yml  audit-trust-receiver-acceptance-trust-checkpoint.yml  audit-trust-receiver-acceptance-trust-consistency-package.yml  audit-trust-receiver-acceptance-trust-consistency.yml  (+21 more)
docs/: NUMBERED_WORKFLOW.md  added-line-gating.md  audit-bundle-admission.md  audit-bundle-trust-state.md  audit-catalog-checkpoints.md  audit-catalog-consistency.md  audit-event-admission.md  audit-evidence-bundles.md  audit-log-integrity.md  audit-segment-catalog.md  audit-segment-rotation.md  audit-trust-admission.md  audit-trust-bundles.md  audit-trust-checkpoints.md  audit-trust-consistency.md  audit-trust-receiver-acceptance-admission.md  audit-trust-receiver-acceptance-bundles.md  audit-trust-receiver-acceptance-checkpoints.md  audit-trust-receiver-acceptance-consistency.md  audit-trust-receiver-acceptance-trust-admission.md  audit-trust-receiver-acceptance-trust-bundles.md  audit-trust-receiver-acceptance-trust-checkpoints.md  audit-trust-receiver-acceptance-trust-consistency.md  audit-trust-receiver-acceptance-trust-receiver.md  audit-trust-receiver-acceptance-trust.md  audit-trust-receiver-acceptance.md  audit-trust-receiver-admission.md  audit-trust-receiver-bundles.md  audit-trust-receiver-checkpoints.md  audit-trust-receiver-consistency.md  audit-trust-receiver-state.md  baseline-gating.md  baseline-review-checklist.md  changed-file-gating.md  github-action.md  policy-suppressions.md  python-distribution.md  reference-review-policy.md  release-admission.md  release-checkpoints.md  (+51 more)
examples/github-actions/: security.yml
scripts/: __init__.py  action_entrypoint.py  bootstrap_integrations.py  github_action.py  release_admission.py  release_admission_core.py  release_admission_core_legacy.py  release_bundle.py  release_checkpoint.py  release_consistency.py  release_transition.py  release_trust.py  supply_chain_evidence.py  validate_wheel.py
tests/: audit_trust_bundle_cases.py  audit_trust_receiver_cases.py  test_action_entrypoint.py  test_added_line_gate.py  test_agent_audit.py  test_agent_baseline.py  test_agent_config.py  test_agent_git.py  test_agent_git_lines.py  test_agent_policy.py  test_agent_system.py  test_audit_bundle_admission.py  test_audit_bundle_trust.py  test_audit_catalog.py  test_audit_catalog_checkpoint.py  test_audit_catalog_consistency.py  test_audit_event_admission.py  test_audit_evidence_bundle.py  test_audit_segments.py  test_audit_trust_admission.py  test_audit_trust_bundle.py  test_audit_trust_checkpoint.py  test_audit_trust_consistency.py  test_audit_trust_receiver.py  test_audit_trust_receiver_acceptance.py  test_audit_trust_receiver_acceptance_admission.py  test_audit_trust_receiver_acceptance_bundle.py  test_audit_trust_receiver_acceptance_checkpoint.py  test_audit_trust_receiver_acceptance_consistency.py  test_audit_trust_receiver_acceptance_trust.py  test_audit_trust_receiver_acceptance_trust_admission.py  test_audit_trust_receiver_acceptance_trust_bundle.py  test_audit_trust_receiver_acceptance_trust_checkpoint.py  test_audit_trust_receiver_acceptance_trust_consistency.py  test_audit_trust_receiver_acceptance_trust_receiver.py  test_audit_trust_receiver_acceptance_trust_rules.py  test_audit_trust_receiver_admission.py  test_audit_trust_receiver_bundle.py  test_audit_trust_receiver_checkpoint.py  test_audit_trust_receiver_cli.py  (+13 more)
