[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "basit-agent-system"
dynamic = ["version"]
description = "Dependency-free AI agent security control plane with baselines, Git scopes, SARIF, and safe command gates."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Abdul Basit" }]
keywords = ["ai-agents", "security", "sarif", "git", "ci", "policy"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Security",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/abdulbasit742/ai-agent-system"
Repository = "https://github.com/abdulbasit742/ai-agent-system"
Issues = "https://github.com/abdulbasit742/ai-agent-system/issues"

[project.scripts]
basit-agent = "agent_cli:main"
basit-agent-lines = "agent_cli:changed_lines_main"
basit-agent-segments = "agent_audit_segments:main"
basit-agent-catalog = "agent_audit_catalog:main"
basit-agent-catalog-checkpoint = "agent_audit_checkpoint:main"
basit-agent-catalog-consistency = "agent_audit_consistency:main"
basit-agent-audit-bundle = "agent_audit_bundle:main"
basit-agent-audit-admission = "agent_audit_admission:main"
basit-agent-audit-trust = "agent_audit_trust:main"
basit-agent-audit-trust-checkpoint = "agent_audit_trust_checkpoint:main"
basit-agent-audit-trust-consistency = "agent_audit_trust_consistency:main"
basit-agent-audit-trust-bundle = "agent_audit_trust_bundle:main"
basit-agent-audit-trust-admission = "agent_audit_trust_admission:main"
basit-agent-audit-trust-receiver = "agent_audit_trust_receiver:main"
basit-agent-audit-trust-receiver-checkpoint = "agent_audit_trust_receiver_checkpoint:main"
basit-agent-audit-trust-receiver-consistency = "agent_audit_trust_receiver_consistency:main"
basit-agent-audit-trust-receiver-bundle = "agent_audit_trust_receiver_bundle:main"
basit-agent-audit-trust-receiver-admission = "agent_audit_trust_receiver_admission:main"
basit-agent-audit-trust-receiver-acceptance = "agent_audit_trust_receiver_acceptance:main"
basit-agent-audit-trust-receiver-acceptance-checkpoint = "agent_audit_trust_receiver_acceptance_checkpoint:main"
basit-agent-audit-trust-receiver-acceptance-consistency = "agent_audit_trust_receiver_acceptance_consistency:main"
basit-agent-audit-trust-receiver-acceptance-bundle = "agent_audit_trust_receiver_acceptance_bundle:main"
basit-agent-audit-trust-receiver-acceptance-admission = "agent_audit_trust_receiver_acceptance_admission:main"
basit-agent-audit-trust-receiver-acceptance-trust = "agent_audit_trust_receiver_acceptance_trust:main"
basit-agent-audit-trust-receiver-acceptance-trust-checkpoint = "agent_audit_trust_receiver_acceptance_trust_checkpoint:main"
agent-system = "agent_cli:main"
agent-changed-lines = "agent_cli:changed_lines_main"
agent-audit-segments = "agent_audit_segments:main"
agent-audit-catalog = "agent_audit_catalog:main"
agent-audit-catalog-checkpoint = "agent_audit_checkpoint:main"
agent-audit-catalog-consistency = "agent_audit_consistency:main"
agent-audit-bundle = "agent_audit_bundle:main"
agent-audit-admission = "agent_audit_admission:main"
agent-audit-trust = "agent_audit_trust:main"
agent-audit-trust-checkpoint = "agent_audit_trust_checkpoint:main"
agent-audit-trust-consistency = "agent_audit_trust_consistency:main"
agent-audit-trust-bundle = "agent_audit_trust_bundle:main"
agent-audit-trust-admission = "agent_audit_trust_admission:main"
agent-audit-trust-receiver = "agent_audit_trust_receiver:main"
agent-audit-trust-receiver-checkpoint = "agent_audit_trust_receiver_checkpoint:main"
agent-audit-trust-receiver-consistency = "agent_audit_trust_receiver_consistency:main"
agent-audit-trust-receiver-bundle = "agent_audit_trust_receiver_bundle:main"
agent-audit-trust-receiver-admission = "agent_audit_trust_receiver_admission:main"
agent-audit-trust-receiver-acceptance = "agent_audit_trust_receiver_acceptance:main"
agent-audit-trust-receiver-acceptance-checkpoint = "agent_audit_trust_receiver_acceptance_checkpoint:main"
agent-audit-trust-receiver-acceptance-consistency = "agent_audit_trust_receiver_acceptance_consistency:main"
agent-audit-trust-receiver-acceptance-bundle = "agent_audit_trust_receiver_acceptance_bundle:main"
agent-audit-trust-receiver-acceptance-admission = "agent_audit_trust_receiver_acceptance_admission:main"
agent-audit-trust-receiver-acceptance-trust = "agent_audit_trust_receiver_acceptance_trust:main"
agent-audit-trust-receiver-acceptance-trust-checkpoint = "agent_audit_trust_receiver_acceptance_trust_checkpoint:main"

[tool.setuptools]
include-package-data = false
py-modules = [
  "agent_audit",
  "agent_audit_events",
  "agent_audit_segments",
  "agent_audit_catalog",
  "agent_audit_checkpoint",
  "agent_audit_consistency",
  "agent_audit_bundle",
  "agent_audit_admission",
  "agent_audit_trust",
  "agent_audit_trust_checkpoint",
  "agent_audit_trust_consistency",
  "agent_audit_trust_bundle",
  "agent_audit_trust_bundle_core",
  "agent_audit_trust_admission",
  "agent_audit_trust_receiver",
  "agent_audit_trust_receiver_checkpoint",
  "agent_audit_trust_receiver_consistency",
  "agent_audit_trust_receiver_bundle",
  "agent_audit_trust_receiver_admission",
  "agent_audit_trust_receiver_acceptance",
  "agent_audit_trust_receiver_acceptance_checkpoint",
  "agent_audit_trust_receiver_acceptance_consistency",
  "agent_audit_trust_receiver_acceptance_bundle",
  "agent_audit_trust_receiver_acceptance_admission",
  "agent_audit_trust_receiver_acceptance_trust",
  "agent_audit_trust_receiver_acceptance_trust_checkpoint",
  "agent_baseline",
  "agent_changed_lines",
  "agent_cli",
  "agent_config",
  "agent_git",
  "agent_policy",
  "agent_system",
  "agent_system_legacy",
  "agent_version",
]

[tool.setuptools.dynamic]
version = { attr = "agent_version.__version__" }
